# mdocx

./: .gitignore  Makefile  README.md  forge.config.ts  jest.config.ts  package.json  pyproject.toml  tsconfig.json  webpack.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pull-request-for-default.yaml  set-tag.yaml
cmd/: build  test
example/: example-style.docx  example.md
python/: mdocx.py
typescript/: index.ts
typescript/parser/: line.ts  markdown.test.ts  markdown.ts  mathjax.ts  types.ts
typescript/worker/: cli.ts
