[tool.poetry]
name = "mdocx"
version = "0.1.0"
description = ""
authors = ["Kasai Kou <80010105+streamwest-1629@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mdocx"}]

[tool.poetry.dependencies]
python = "^3.10"
cairosvg = "^2.6.0"
python-docx = "^0.8.11"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
virtualenv = "^20.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
